#13 #9 #5 wip docs: Fix validation errors, add to docs design

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             </section>
 
             <section id="awareness-section" class="section-margin">
+                <h2 class="sr-only">A section to encourage awareness of the human torso</h2>
                 <article id="awareness">
                     <h2 id="awareness-title" class="section-title">Awareness</h2>
 
@@ -181,7 +182,9 @@
                 </article>
             </section>
 
-            <section id="support-section"></section>
+            <section id="support-section">
+                <h2 class="sr-only">Support</h2>
+            </section>
 
             <section id="resources-section">
                 <div class="resources-grid">
