--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <div>
                             <h2  class="text-center">Survive and Thrive</h2>
                             <ul class="resource-lists">
-                                <li class="section-content"><a href="https://breast-cancer-club.herokuapp.com/"> Breast Cancer Club</a></li>
+                                <li class="section-content"><a href="https://breast-cancer-club.herokuapp.com/" target="_blank"> Breast Cancer Club</a></li>
                                 <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/living-beyond-breast-cancer/life-after-breast-cancer-treatment" target="_blank" rel="noopener"> Post treatment</a></li>
                                 <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/living-beyond-breast-cancer/life-after-breast-cancer-treatment" target="_blank" rel="noopener"> Positive Living</a></li>
                                 <li class="section-content"><a href="https://breastcancernow.org/information-support/facing-breast-cancer/living-beyond-breast-cancer/life-after-breast-cancer-treatment"target="_blank" rel="noopener"> Virtual Support Hub</a></li>
