--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
 
         <!-- Main section -->
         <main id="home" class="footer-allowance">
+
+            <section class="hero-image">
+                <div class="hero-text">
+                    <h1>Bust IT: Cancer Without Borders</h1>
+                </div>
+            </section>
+
             <h1 class="readable-width text-center title">Bust IT: Cancer Without Borders</h1>
 
             <section id="about-us" class="section-margin">
