--- a/privacy.html
+++ b/privacy.html
@@ -38,7 +38,7 @@
         <!--Header section-->
         <header>
             <div class="logo-spin">
-                <img src="assets/images/logo-cools.png" alt="Logo icon of all genders, rotating"></img>
+                <img src="assets/images/logo-cools.png" alt="Logo icon of all genders">
             </div>
 
             <div class="logo">
