Navbar stylistic adjustments made

--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
     <body>
         <!--Header section-->
         <header>
-            <div class="logo-spin">
-                <img src="assets/images/logo-cools.png" alt="Logo icon of all genders, rotating">
+            <div class="brand">
+                <a href="index.html" class="tap-target">
+                    <img src="assets/images/logo-cools.png" alt="Logo icon of all genders">
+                </a>
             </div>
 
             <div class="logo">
