Navbar toggler menu style changes applied

--- a/index.html
+++ b/index.html
@@ -62,14 +62,15 @@
 
             <nav class="menu" id="menu">
                 <div class="menu-bar" role="button" id="close-icon">
+                    <span class="sr-only">Close the navigation menu</span>
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#awareness-section">Awareness</a></li>
-                    <li><a href="#support-section">Support</a></li>
-                    <li><a href="#resources-section">Resources</a></li>
-                    <li><a href="#contact-section">Contact</a></li>
+                    <li class="list-item"><a href="index.html">Home</a></li>
+                    <li class="list-item"><a href="#awareness-section">Awareness</a></li>
+                    <li class="list-item"><a href="#support-section">Support</a></li>
+                    <li class="list-item"><a href="#resources-section">Resources</a></li>
+                    <li class="list-item"><a href="#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </header>
