Updated navbar links on all pages

--- a/500.html
+++ b/500.html
@@ -37,29 +37,32 @@
     <body class="footer-page error-background">
         <!-- Header section -->
         <header>
-            <div class="logo-spin">
-                <img src="assets/images/logo-cools.png" alt="Logo icon of all genders">
+            <div class="brand">
+                <a href="index.html" class="tap-target">
+                    <img src="assets/images/logo-cools.png" alt="Logo icon of all genders">
+                </a>
             </div>
 
             <div class="logo">
                 <h2>Bust IT: Cancer Without Borders</h2>
             </div>
 
-            <div class="menu-bar tap-target" onclick="openNavBar()" role="button">
+            <div class="menu-bar tap-target" role="button" id="nav-burger">
                 <span class="sr-only">Open the navigation menu</span>
                 <i class="fas fa-bars fa-2x tap-target bar-icon"></i>
             </div>
 
             <nav class="menu" id="menu">
-                <div class="menu-bar" onclick="closeNavBar()" role="button">
+                <div class="menu-bar" role="button" id="close-icon">
+                    <span class="sr-only">Close the navigation menu</span>
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
-                    <li><a href="/index.html#home">Home</a></li>
-                    <li><a href="/index.html#awareness">Awareness</a></li>
-                    <li><a href="/index.html#support">Support</a></li>
-                    <li><a href="/index.html#resources">Resources</a></li>
-                    <li><a href="/index.html#contact">Contact</a></li>
+                    <li class="list-item"><a href="index.html">Home</a></li>
+                    <li class="list-item"><a href="index.html#awareness-section">Awareness</a></li>
+                    <li class="list-item"><a href="index.html#support-section">Support</a></li>
+                    <li class="list-item"><a href="index.html#resources-section">Resources</a></li>
+                    <li class="list-item"><a href="index.html#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </header>
