--- a/accessibility.html
+++ b/accessibility.html
@@ -37,8 +37,10 @@
     <body class="footer-page">
         <!--Header section-->
         <header>
-            <div class="logo-spin">
-                <img src="assets/images/logo-cools.png" alt="Logo icon of all genders">
+            <div class="brand">
+                <a href="index.html" class="tap-target">
+                    <img src="assets/images/logo-cools.png" alt="Logo icon of all genders">
+                </a>
             </div>
 
             <div class="logo">
@@ -52,14 +54,15 @@
 
             <nav class="menu" id="menu">
                 <div class="menu-bar" role="button" id="close-icon">
+                    <span class="sr-only">Close the navigation menu</span>
                     <i class="fas fa-times fa-2x tap-target close-icon"></i>
                 </div>
                 <ul class="overlay-content">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#awareness-section">Awareness</a></li>
-                    <li><a href="index.html#support-section">Support</a></li>
-                    <li><a href="index.html#resources-section">Resources</a></li>
-                    <li><a href="index.html#contact-section">Contact</a></li>
+                    <li class="list-item"><a href="index.html">Home</a></li>
+                    <li class="list-item"><a href="index.html#awareness-section">Awareness</a></li>
+                    <li class="list-item"><a href="index.html#support-section">Support</a></li>
+                    <li class="list-item"><a href="index.html#resources-section">Resources</a></li>
+                    <li class="list-item"><a href="index.html#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </header>
