--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </section>
                     
                     <section class="section-margin">
-                        <h3 class="text-center">Female torso</h3>
+                        <h3 class="text-center m-top-bottom">Female torso</h3>
                         <div id="awareness-content-1">
                             <model-viewer
                                 id="female-model-viewer"
@@ -165,6 +165,7 @@
                     </section>
 
                     <section class="section-margin">
+                        <h3 class="text-center m-top-bottom">Male torso</h3>
                         <div id="awareness-content-2">
                             <p class="section-content">
                                 Research done in the past few years has identified that Transgender
@@ -187,7 +188,6 @@
                                 src="assets/models/male-torso-transLights.glb">
                             </model-viewer>
                         </div>
-                        <h3 class="text-center">Male torso</h3>
                     </section>
                 </article>
             </section>
