--- a/index.html
+++ b/index.html
@@ -194,6 +194,17 @@
 
             <section id="support-section">
                 <h2 class="sr-only">Support</h2>
+                <p class="section-content">Sign up to recieve monthly check up remainders</p>
+                <div class="support">
+                <form id="support-form" onsubmit="return sendMail(this);">
+                    
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="Your email address..." required>
+
+                        <button type="submit" value="Submit">Send</button>
+                   
+                </form>
+            </div>           
             </section>
 
             <section id="resources-section">
