--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <h2 id="support-title" class="section-title">Support</h2>
                     <p class="section-content text-center">Sign up to recieve monthly check up reminders</p>
                     <div class="support readable-width">
-                        <form id="support-form" onsubmit="return sendMail(this);">
+                        <form id="support-form" class="inline-form" onsubmit="return sendMail(this);">
                             <label for="email">Email: </label>
                             <input type="email" id="email" name="email" placeholder="Your email address..." required>
                             <button type="submit" value="Submit">Send</button>
