style: Add css and background img to support section

--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
                 </article>
             </section>
 
+        <!-- support section -->
             <section id="support-section">
                 <h2 class="sr-only">Support</h2>
-                <p class="section-content">Sign up to recieve monthly check up remainders</p>
+                <h3 class="section-content">Sign up to recieve monthly check up remainders</h3>
                 <div class="support">
                 <form id="support-form" onsubmit="return sendMail(this);">
                     
